--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <!--
-	ABCD by TEMPLATE STOCK
-	templatestock.co @templatestock
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+	ABCD by Ayush Singh
 -->
 
 <html lang="en">
@@ -11,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ABCD Free HTML5 Responsive Template | Template Stock</title>
+    <title>ABCD Free HTML5 Responsive Template | Ayush Singh</title>
 
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,12 +21,7 @@
     <!--revolution slider setting css-->
     <link href="rs-plugin/css/settings.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet" type="text/css" />
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="80">
@@ -898,7 +891,7 @@
                 <li><a href="#"><i class="icon icon-social-facebook"></i></a></li>
                 <li><a href="#"><i class="icon icon-social-dribbble"></i></a></li>
             </ul>
-            <span class="copyright">&copy; Copyright 2016. ABCD Created By <a href="http://templatestock.co">Template Stock</a></span>
+            <span class="copyright">&copy; Copyright 2016. ABCD Created By <a href="http://templatestock.co">Ayush Singh</a></span>
         </div>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
