--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ABCD Free HTML5 Responsive Template | Ayush Singh</title>
+    <title>FEEDBACK ELECTRICAL</title>
 
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                <a class="navbar-brand alo" href="index.html">ABCD</a>
+                <a class="navbar-brand alo" href="index.html" style="color: forestgreen;">FEEDBACK </a>
+                <a class="navbar-brand alo" href="index.html"> ELECTRICAL</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right scroll-to">
@@ -74,12 +75,12 @@
                     <!-- LAYERS -->
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption slider-title" data-x="center" data-y="center" data-voffset="-30" data-speed="500" data-start="1200" data-easing="Power4.easeInOut">
-                        welcome to <span>ABCD</span>
+                        <span>FEEDBACK ELECTRICAL & SERVICES</span>
                     </div>
                     <!-- /tp-caption -->
                     <!-- LAYER NR. 2 -->
                     <div class="tp-caption slider-caption" data-x="center" data-y="center" data-voffset="40" data-speed="500" data-start="1800" data-easing="Power4.easeInOut" data-captionhidden="on">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit aute irure
+                        One Step For All your Services Need
                     </div>
                     <!-- /tp-caption -->
 
@@ -128,10 +129,11 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text-center">
                     <div class="section-title">
-                        <h1>modern <span class="alo">Digital agency</span></h1>
+                        <h1>About <span class="alo">The Organisation</span></h1>
                         <span class="border-line"></span>
                         <p class="lead subtitle-caption">
-                            we are a creative agency located in <span class="colored-text">sydney, australia.</span> It is a long established fact that a reader will be distracted by the readable content.
+                            Founded by Young Dynamic Persons , <span class="colored-text">FEEDBACK ELECTRICAL & SERVICES PRIVATE LIMITED</span> is one of the leading companyin the state of Bihar. In a very short period of time the company is working in
+                            different sectors, and has proved in every field, We provide sfficacious solutions to our clint's needs, running intodeep engagements, Our philosofy is of partnering with ourclints
                         </p>
                     </div>
                 </div>
