--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
                         <span class="border-line"></span>
                         <p class="lead subtitle-caption">
                             Founded by Young Dynamic Persons , <span class="colored-text">FEEDBACK ELECTRICAL & SERVICES PRIVATE LIMITED</span> is one of the leading companyin the state of Bihar. In a very short period of time the company is working in
-                            different sectors, and has proved in every field, We provide sfficacious solutions to our clint's needs, running intodeep engagements, Our philosofy is of partnering with ourclints
+                            different sectors, and has proved in every field, We provide sfficacious solutions to our clint's needs, running into deep engagements, Our philosofy is of partnering with our clintsnot being a distant services service provider
+                            , since the businesses are inherently different, We tailor our services
                         </p>
                     </div>
                 </div>
