--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
                         <p class="lead subtitle-caption">
                             Founded by Young Dynamic Persons , <span class="colored-text">FEEDBACK ELECTRICAL & SERVICES PRIVATE LIMITED</span> is one of the leading companyin the state of Bihar. In a very short period of time the company is working in
                             different sectors, and has proved in every field, We provide sfficacious solutions to our clint's needs, running into deep engagements, Our philosofy is of partnering with our clintsnot being a distant services service provider
-                            , since the businesses are inherently different, We tailor our services
+                            , since the businesses are inherently different, We tailor our services to meet clint's specific needs and banish the 'one-side-fits-all' standardlization, We recurit, train, motivate and retain highly capable and sharpest
+                            talent, Who bring quality in their workand deliver the best solutions. Headquateredin Patna which corporate branches at New Delhi, Jharkhand, wehave associate office at 5 location in India and leverage our state-of-art infrastructure,
+                            Wide network, best practices and people development programs. Team Strength of more than <b>100</b> people is Uniquely positioned to provide you quality opinions and services, Our Interdiscriplinary approach renders to gige
+                            you seamless value.
                         </p>
                     </div>
                 </div>
@@ -260,7 +263,7 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <div class="section-title text-center">
-                        <h1> <span class="alo">ABCD</span> team</h1>
+                        <h1> <span class="alo">FEEDBACK ELECTRICAL</span> TEAM</h1>
                         <span class="border-line"></span>
                         <p class="lead subtitle-caption">
                             Vivamus congue diam vitae tortor imperdiet congue. Nullam sagittis, tristique diam, ut ullamcorper tellus. Cras porttitor massa.
