--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--
-	ABCD by Ayush Singh
--->
-
 <html lang="en">
 
 <head>
@@ -331,7 +327,7 @@
                         <h1>Our <span class="colored-text">Services</span></h1>
                         <span class="border-line"></span>
                         <p class="lead subtitle-caption">
-                            Why you choose <span class="colored-text">ABCD</span>
+                            Why you choose <span class="colored-text">FEEDBACK ELECTRICAL</span>
                         </p>
                     </div>
                 </div>
@@ -486,7 +482,7 @@
                     </div>
                 </div>
             </div>
-            <!-- title row end-->
+            title row end
             <div class="row">
                 <div class="col-sm-4 margin-bottom30">
                     <div class="price-box text-center">
@@ -571,7 +567,7 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <div class="section-title text-center">
-                        <h1> <span class="alo">ABCD</span> Portfolio</h1>
+                        <h1> <span class="alo">FEEDBACK ELECTRICAL</span> Portfolio</h1>
                         <span class="border-line"></span>
                         <p class="lead subtitle-caption">
                             Vivamus congue diam vitae tortor imperdiet congue.
@@ -736,7 +732,7 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <div class="section-title text-center">
-                        <h1> <span class="alo">ABCD</span> News</h1>
+                        <h1> <span class="alo">FEEDBACK ELECTRICAL</span> News</h1>
                         <span class="border-line"></span>
                         <p class="lead subtitle-caption">
                             Vivamus congue diam vitae tortor imperdiet congue.
@@ -823,7 +819,7 @@
                         </div>
                         <div class="col-sm-4 margin-bottom30 text-center">
                             <i class="ion-ios-email-outline"></i>
-                            <h4>support@ABCD.com</h4>
+                            <h4>support@FEEDBACK ELECTRICAL.com</h4>
                         </div>
                         <div class="col-sm-4 margin-bottom30 text-center">
                             <i class="ion-ios-telephone-outline"></i>
@@ -891,13 +887,13 @@
 
     <footer class="footer">
         <div class="container text-center">
-            <span class="alo">ABCD</span>
+            <span class="alo">FEEDBACK ELECTRICAL</span>
             <ul class="social list-inline">
                 <li><a href="#"><i class="icon icon-social-twitter"></i></a></li>
                 <li><a href="#"><i class="icon icon-social-facebook"></i></a></li>
                 <li><a href="#"><i class="icon icon-social-dribbble"></i></a></li>
             </ul>
-            <span class="copyright">&copy; Copyright 2016. ABCD Created By <a href="http://templatestock.co">Ayush Singh</a></span>
+            <span class="copyright">&copy; Copyright 2016. FEEDBACK ELECTRICAL Created By <a href="http://templatestock.co">Ayush Singh</a></span>
         </div>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
