--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                             <i class="ion-ios-lightbulb-outline back-icon"></i>
                         </div>
                         <div class="features-text-right">
-                            <h3>creative Designs</h3>
+                            <h3>VISION</h3>
                             <p>
-                                Vivamus congue diam vitae tortor imperdiet congue. Nullam sagittis, tristique diam, ut ullamcorper tellus. Cras porttitor massa.
+                               FEEDBACK ELECTRICAL AND SERVICES firmly believes that electricity is corner stone of high quality life.There will be a never ending need of products and services to harness and maximize its full potential and use.In doing so,we will be in the best-in-class provider of topnotch electrical products and services. 
                             </p>
                         </div>
                     </div>
@@ -164,9 +164,9 @@
                             <i class="ion-ios-gear-outline back-icon"></i>
                         </div>
                         <div class="features-text-right">
-                            <h3>Great support</h3>
+                            <h3>MISSION</h3>
                             <p>
-                                Vivamus congue diam vitae tortor imperdiet congue. Nullam sagittis, tristique diam, ut ullamcorper tellus. Cras porttitor massa.
+                                FEEDBACK ELECTRICAL AND SERVICES is committed to providing the highest quality services exceeding our client's expectations.We shall continue to expand in equipment and facilities,and engage in training and certification programs to further serve customers with utmost excellence and professionalism.
                             </p>
                         </div>
                     </div>
@@ -183,9 +183,9 @@
                             <i class="ion-iphone back-icon"></i>
                         </div>
                         <div class="features-text-right">
-                            <h3>Fully Responsive</h3>
+                            <h3>OUR VALUES</h3>
                             <p>
-                                Vivamus congue diam vitae tortor imperdiet congue. Nullam sagittis, tristique diam, ut ullamcorper tellus. Cras porttitor massa.
+                                We believe in integrity,quality,honsety and commmitment to our clients.We also believe that any successful transaction consist of a very crucial element,"Work Quality,Time of Work and price of work".
                             </p>
                         </div>
                     </div>
@@ -199,9 +199,9 @@
                             <i class="ion-ios-people-outline back-icon"></i>
                         </div>
                         <div class="features-text-right">
-                            <h3>Dedicated Team</h3>
+                            <h3>SERVICES</h3>
                             <p>
-                                Vivamus congue diam vitae tortor imperdiet congue. Nullam sagittis, tristique diam, ut ullamcorper tellus. Cras porttitor massa.
+                                We provide focsed application services to clients leveraging technology expertise through flexible delivery models and industry best practices.
                             </p>
                         </div>
                     </div>
