--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                 <!-- SLIDE 2 -->
                 <li data-transition="fade" data-slotamount="7" data-masterspeed="1500">
                     <!-- MAIN IMAGE -->
-                    <img src="images/bg-3.jpg" alt="desk" data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
+                    <img src="images/wallpaper/558212-electrical-engineering-wallpaper-power-wallpaper-electrical-engineering-2280x1000-download-hd-wallpaper.jpg" alt="desk" data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
 
                     <!-- LAYERS -->
                     <!-- LAYER NR. 1 -->
-                    <div class="tp-caption slider-title" data-x="center" data-y="center" data-voffset="-30" data-speed="500" data-start="1200" data-easing="Power4.easeInOut">
+                    <div class="tp-caption slider-title" data-x="center" data-y="center" data-voffset="-30" data-speed="500" data-start="1200" data-easing="Power4.easeInOut" style="color: black;">
                         Modern <span>Agency</span>
                     </div>
                     <!-- /tp-caption -->
@@ -322,12 +322,12 @@
     <section id="services" class="section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2 text-center">
+                <div class="col-sm-9 col-sm-offset-2 text-center">
                     <div class="section-title">
-                        <h1>Our <span class="colored-text">Services</span></h1>
+                        <h1>Why you choose <span class="colored-text">FEEDBACK ELECTRICAL</span></h1>
                         <span class="border-line"></span>
                         <p class="lead subtitle-caption">
-                            Why you choose <span class="colored-text">FEEDBACK ELECTRICAL</span>
+                            Sector in witch the company is providing the <span class="colored-text">services</span>
                         </p>
                     </div>
                 </div>
