--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <!-- SLIDE 1 -->
                 <li data-transition="fade" data-slotamount="7" data-masterspeed="1500">
                     <!-- MAIN IMAGE -->
-                    <img src="images/bg-1.jpg" alt="desk" data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
+                    <img src="images/wallpaper/bg.jpg" alt="desk" data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
                     <!-- LAYERS -->
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption slider-title" data-x="center" data-y="center" data-voffset="-30" data-speed="500" data-start="1200" data-easing="Power4.easeInOut">
@@ -89,7 +89,7 @@
                 <!-- SLIDE 2 -->
                 <li data-transition="fade" data-slotamount="7" data-masterspeed="1500">
                     <!-- MAIN IMAGE -->
-                    <img src="images/wallpaper/558212-electrical-engineering-wallpaper-power-wallpaper-electrical-engineering-2280x1000-download-hd-wallpaper.jpg" alt="desk" data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
+                    <img src="images/bg-1.jpg" alt="desk" data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
 
                     <!-- LAYERS -->
                     <!-- LAYER NR. 1 -->
@@ -150,7 +150,8 @@
                         <div class="features-text-right">
                             <h3>VISION</h3>
                             <p>
-                               FEEDBACK ELECTRICAL AND SERVICES firmly believes that electricity is corner stone of high quality life.There will be a never ending need of products and services to harness and maximize its full potential and use.In doing so,we will be in the best-in-class provider of topnotch electrical products and services. 
+                                FEEDBACK ELECTRICAL AND SERVICES firmly believes that electricity is corner stone of high quality life.There will be a never ending need of products and services to harness and maximize its full potential and use.In doing so,we will be in the best-in-class
+                                provider of topnotch electrical products and services.
                             </p>
                         </div>
                     </div>
@@ -166,7 +167,8 @@
                         <div class="features-text-right">
                             <h3>MISSION</h3>
                             <p>
-                                FEEDBACK ELECTRICAL AND SERVICES is committed to providing the highest quality services exceeding our client's expectations.We shall continue to expand in equipment and facilities,and engage in training and certification programs to further serve customers with utmost excellence and professionalism.
+                                FEEDBACK ELECTRICAL AND SERVICES is committed to providing the highest quality services exceeding our client's expectations.We shall continue to expand in equipment and facilities,and engage in training and certification programs to further serve customers
+                                with utmost excellence and professionalism.
                             </p>
                         </div>
                     </div>
