--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
 
                     <!-- LAYERS -->
                     <!-- LAYER NR. 1 -->
-                    <div class="tp-caption slider-title" data-x="center" data-y="center" data-voffset="-30" data-speed="500" data-start="1200" data-easing="Power4.easeInOut" style="color: black;">
-                        Modern <span>Agency</span>
+                    <div class="tp-caption slider-title" data-x="center" data-y="center" data-voffset="-30" data-speed="500" data-start="1200" data-easing="Power4.easeInOut">
+                        <span> IT Sector</span>
                     </div>
                     <!-- /tp-caption -->
 
                     <!-- LAYER NR. 2 -->
                     <div class="tp-caption slider-caption" data-x="center" data-y="center" data-voffset="40" data-speed="500" data-start="1800" data-easing="Power4.easeInOut" data-captionhidden="on">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit aute irure
+                        Charge back for hardware and softwareusages, and automated, industry-leading licence hardvestiong capabilities across Windows, Unix and Linux Platform
                     </div>
                     <!-- /tp-caption -->
 
@@ -476,34 +476,33 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text-center">
                     <div class="section-title">
-                        <h1>Our <span class="colored-text">Pricing</span></h1>
+                        <h1>Our <span class="colored-text">Work</span></h1>
                         <span class="border-line"></span>
                         <p class="lead subtitle-caption">
-                            Vivamus congue diam vitae tortor imperdiet congue.
+                            FEEDBACK experienced team specializes in electricalcontracting work for commercial, retail and industrial clints ranging from large bluechip companies to small and medium enterprises. FEEDBACK recognize the key to run a successful
                         </p>
                     </div>
                 </div>
             </div>
-            title row end
             <div class="row">
                 <div class="col-sm-4 margin-bottom30">
                     <div class="price-box text-center">
                         <div class="header ">
-                            <h3>Standard</h3>
+                            <h3>MANAGERS</h3>
                             <div class="price">
-                                <h2>$3.99</h2>
-                                <span>Start price / month</span>
+                                <h2>Contant Risk</h2>
+                                <!-- <span>Set High Standard</span> -->
                             </div>
                         </div>
                         <ul class="list-unstyled">
-                            <li>10 GB Storage Space</li>
-                            <li>50 GB Bandwidth</li>
-                            <li>Unlimited Users</li>
-                            <li>No Time Tracking</li>
-                            <li>Enhanced Security</li>
+                            <li>Communicate Openly</li>
+                            <li>Stay Involve</li>
+                            <li>Set High Standard</li>
+                            <!-- <li>No Time Tracking</li>
+                            <li>Enhanced Security</li> -->
                         </ul>
                         <div class="price-footer">
-                            <h4><a href="#" class="btn btn-border-black">Buy Now</a></h4>
+                            <!-- <h4><a href="#" class="btn btn-border-black">Buy Now</a></h4> -->
                         </div>
                     </div>
                 </div>
@@ -511,21 +510,21 @@
                 <div class="col-sm-4 margin-bottom30">
                     <div class="price-box text-center">
                         <div class="header active">
-                            <h3>Standard</h3>
+                            <h3>SUPERVISORs</h3>
                             <div class="price">
-                                <h2>$3.99</h2>
-                                <span>Start price / month</span>
+                                <h2>Promote Risk Awareness</h2>
+                                <!-- <span>Start price / month</span> -->
                             </div>
                         </div>
                         <ul class="list-unstyled">
-                            <li>10 GB Storage Space</li>
-                            <li>50 GB Bandwidth</li>
-                            <li>Unlimited Users</li>
-                            <li>No Time Tracking</li>
-                            <li>Enhanced Security</li>
+                            <li>Encourage the Team</li>
+                            <li>Involve the team</li>
+                            <li>Ensure Complince</li>
+                            <!-- <li>No Time Tracking</li>
+                            <li>Enhanced Security</li> -->
                         </ul>
                         <div class="price-footer">
-                            <h4><a href="#" class="btn btn-border-theme">Buy Now</a></h4>
+                            <!-- <h4><a href="#" class="btn btn-border-theme">Buy Now</a></h4> -->
                         </div>
                     </div>
                 </div>
@@ -533,21 +532,21 @@
                 <div class="col-sm-4 margin-bottom30">
                     <div class="price-box text-center">
                         <div class="header">
-                            <h3>Standard</h3>
+                            <h3>EVERYONE</h3>
                             <div class="price">
-                                <h2>$3.99</h2>
-                                <span>Start price / month</span>
+                                <h2>Be Mindful</h2>
+                                <!-- <span>Start price / month</span> -->
                             </div>
                         </div>
                         <ul class="list-unstyled">
-                            <li>10 GB Storage Space</li>
-                            <li>50 GB Bandwidth</li>
-                            <li>Unlimited Users</li>
-                            <li>No Time Tracking</li>
-                            <li>Enhanced Security</li>
+                            <li>Follow Rules</li>
+                            <li>Speak Up</li>
+                            <li>Get Involved</li>
+                            <!-- <li>No Time Tracking</li>
+                            <li>Enhanced Security</li> -->
                         </ul>
                         <div class="price-footer">
-                            <h4><a href="#" class="btn btn-border-black">Buy Now</a></h4>
+                            <!-- <h4><a href="#" class="btn btn-border-black">Buy Now</a></h4> -->
                         </div>
                     </div>
                 </div>
