--- a/index.html
+++ b/index.html
@@ -479,7 +479,10 @@
                         <h1>Our <span class="colored-text">Work</span></h1>
                         <span class="border-line"></span>
                         <p class="lead subtitle-caption">
-                            FEEDBACK experienced team specializes in electricalcontracting work for commercial, retail and industrial clints ranging from large bluechip companies to small and medium enterprises. FEEDBACK recognize the key to run a successful
+                            FEEDBACK experienced team specializes in electricalcontracting work for commercial, retail and industrial clints ranging from large bluechip companies to small and medium enterprises. FEEDBACK recognize the key to runing a successful business is understanding
+                            our clints needs and meeting their expectations. This can only be achieved through effectivecommunication between our staff and our clints. FEEDBACK have developed a roubest yet simple delivery methodology for qualityand consistant
+                            project delevery.Appoint a dedicated project manager for each job who ensures that there is clear communicationof the needs for requirements across the team; provides ovesight of the delivery of the project to the clint's specifications
+                            and oversees the design and engineers throughout the project
                         </p>
                     </div>
                 </div>
