--- a/index.html
+++ b/index.html
@@ -578,7 +578,9 @@
                         </p>
                     </div>
                 </div>
+                <img src="./images/content/cantent.png" alt="" srcset="">
             </div>
+
             <!--heading row-->
 
 
