--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@
                         </p>
                     </div>
                 </div>
+                <img src="./images/content/cantent 2.png" alt="" srcset="">
             </div>
             <div class="row">
                 <div class="col-sm-4 margin-bottom30">
