--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="80">
+<body data-spy="scroll" data-target=".navbar" data-offset="800">
 
 
     <!-- Static navbar -->
@@ -230,16 +230,16 @@
                 <!--fact cols-->
                 <div class="col-sm-3 margin-bottom30 text-center">
                     <div class="fact-box">
-                        <h2>832</h2>
-                        <h5>Projects finish</h5>
+                        <h2>15+</h2>
+                        <h5>Ongoing Projects</h5>
                         <span class="border-line"></span>
                     </div>
                 </div>
                 <!--fact cols-->
                 <div class="col-sm-3 margin-bottom30 text-center">
                     <div class="fact-box">
-                        <h2>800</h2>
-                        <h5>Pizza ordered </h5>
+                        <h2>10+</h2>
+                        <h5>Upcomming Projects </h5>
                         <span class="border-line"></span>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                 <div class="col-sm-3 margin-bottom30 text-center">
                     <div class="fact-box">
                         <h2>750</h2>
-                        <h5>Cups of coffee</h5>
+                        <h5>Finished Projects</h5>
                         <span class="border-line"></span>
                     </div>
                 </div>
@@ -484,9 +484,10 @@
                             project delevery.Appoint a dedicated project manager for each job who ensures that there is clear communicationof the needs for requirements across the team; provides ovesight of the delivery of the project to the clint's specifications
                             and oversees the design and engineers throughout the project
                         </p>
+                        <img src="./images/content/cantent 2.png" alt="" srcset="" style="align-items: center;">
                     </div>
                 </div>
-                <img src="./images/content/cantent 2.png" alt="" srcset="">
+
             </div>
             <div class="row">
                 <div class="col-sm-4 margin-bottom30">
