--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <!-- LAYERS -->
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption slider-title" data-x="center" data-y="center" data-voffset="-30" data-speed="500" data-start="1200" data-easing="Power4.easeInOut">
-                        <span>FEEDBACK ELECTRICAL & SERVICES</span>
+                        <span>WELCOME TO OUR WORLD</span>
                     </div>
                     <!-- /tp-caption -->
                     <!-- LAYER NR. 2 -->
@@ -484,7 +484,7 @@
                             project delevery.Appoint a dedicated project manager for each job who ensures that there is clear communicationof the needs for requirements across the team; provides ovesight of the delivery of the project to the clint's specifications
                             and oversees the design and engineers throughout the project
                         </p>
-                        <img src="./images/content/cantent 2.png" alt="" srcset="" style="align-items: center;">
+                        <img src="./images/content/cantent 2.png" alt="" srcset="">
                     </div>
                 </div>
 
@@ -828,7 +828,7 @@
                         </div>
                         <div class="col-sm-4 margin-bottom30 text-center">
                             <i class="ion-ios-email-outline"></i>
-                            <h4>support@FEEDBACK ELECTRICAL.com</h4>
+                            <h4>feedback.electrical79032@gmail.com</h4>
                         </div>
                         <div class="col-sm-4 margin-bottom30 text-center">
                             <i class="ion-ios-telephone-outline"></i>
