--- a/index.html
+++ b/index.html
@@ -810,8 +810,8 @@
     <!--news section end-->
     <div class="cta">
         <div class="container text-center scroll-to">
-            <h1>Simple & clean one page template</h1>
-            <a href="#contact" class="btn btn-border-black btn-radius btn-lg">Purchase now</a>
+            <h1>UE ARE HERE FOR HELP YOU </h1>
+            <a href="#contact" class="btn btn-border-black btn-radius btn-lg">CONTACT US</a>
         </div>
     </div>
     <!--call to action-->
