--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
     <!--news section end-->
     <div class="cta">
         <div class="container text-center scroll-to">
-            <h1>UE ARE HERE FOR HELP YOU </h1>
+            <h1>WE ARE HERE FOR HELP YOU </h1>
             <a href="#contact" class="btn btn-border-black btn-radius btn-lg">CONTACT US</a>
         </div>
     </div>
