--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
     <!--news section end-->
     <div class="cta">
         <div class="container text-center scroll-to">
-            <h1>WE ARE HERE FOR HELP YOU </h1>
+            <h1>wE ARE HERE FOR HELP YOU </h1>
             <a href="#contact" class="btn btn-border-black btn-radius btn-lg">CONTACT US</a>
         </div>
     </div>
@@ -902,7 +902,7 @@
                 <li><a href="#"><i class="icon icon-social-facebook"></i></a></li>
                 <li><a href="#"><i class="icon icon-social-dribbble"></i></a></li>
             </ul>
-            <span class="copyright">&copy; Copyright 2016. FEEDBACK ELECTRICAL Created By <a href="http://templatestock.co">Ayush Singh</a></span>
+            <span class="copyright">&copy; Copyright 2016. FEEDBACK ELECTRICAL Created By <a href="https://ayushkssk.tk">Ayush Singh</a></span>
         </div>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
