--- a/index.html
+++ b/index.html
@@ -484,8 +484,24 @@
                             project delevery.Appoint a dedicated project manager for each job who ensures that there is clear communicationof the needs for requirements across the team; provides ovesight of the delivery of the project to the clint's specifications
                             and oversees the design and engineers throughout the project
                         </p>
-                        <img src="./images/content/cantent 2.png" alt="" srcset="">
+                        <img src="./images/content/cantent 3.png" alt="" srcset="">
+                        <p>
+                            <h2 style="color: rgb(90, 149, 238);"> FEEDBACK ELECTRICAL & SERVICES PRIVATE LIMITED <i> suite of maintenance and installation services to the commercial.</i></h2>
+                        </p>
+                        <p>
+                            <ul>
+                                <li>Electrical Design & Construction</li>
+                                <li>Switchbpard & Metering alterations Stand by generators</li>
+                                <li>Unintrupted Power Supply (UPS)</li>
+                                <li>Energy Management Systems/power audits Light and power installation</li>
+                                <li>Exit and Emergencylighting</li>
+                                <li>24/7 maintenance and servicing</li>
+                            </ul>
+                        </p>
                     </div>
+                </div>
+                <div>
+
                 </div>
 
             </div>
@@ -560,10 +576,32 @@
         </div>
     </div>
     <!--pricing-->
-    <div class="cta cta-bg">
-        <div class="container text-center scroll-to">
-            <h1>WE'VE GOT PLENTY MORE TO SAY</h1>
-            <a href="#contact" class="btn btn-white btn-radius btn-lg">Let's talk</a>
+    <div class="col-sm-6" style="align-content: space-around;">
+        <div class="entry-thumb portfolio-thumb">
+            <div class="imgoverlay text-light">
+                <a href="https://www.edfenergy.com/" target="_blank">
+                    <img src="images/SERVICES/edf.jpg" class="img-responsive" alt="">
+                    <div class="overlay"><span class="overlaycolor"></span>
+                        <div class="overlayinfo" style="margin-top: -11px;">
+                            <h4>EDF</h4>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="entry-thumb portfolio-thumb">
+            <div class="imgoverlay text-light">
+                <a href="https://genuspower.com/" target="_blank">
+                    <img src="images/SERVICES/Genus.jpg" class="img-responsive" alt="">
+                    <div class="overlay"><span class="overlaycolor"></span>
+                        <div class="overlayinfo" style="margin-top: -11px;">
+                            <h4>GENUS</h4>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
     <!--call to action-->
@@ -572,13 +610,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
+                    <img src="./images/content/cantent.png" alt="" srcset="" style="align-items: center;">
                     <div class="section-title text-center">
-                        <h1> <span class="alo">FEEDBACK ELECTRICAL</span> Portfolio</h1>
-                        <span class="border-line"></span>
-                        <p class="lead subtitle-caption">
-                            Vivamus congue diam vitae tortor imperdiet congue.
-                        </p>
-                        <img src="./images/content/cantent.png" alt="" srcset="">
+
+                        <h1>OUR <span>SERVICES</span></h1>
+
                     </div>
                 </div>
 
@@ -832,7 +868,7 @@
                         </div>
                         <div class="col-sm-4 margin-bottom30 text-center">
                             <i class="ion-ios-telephone-outline"></i>
-                            <h4>+01 - 4567 - 65678</h4>
+                            <h4>+01-4567-65678</h4>
                         </div>
                     </div>
                     <!--contact details-->
